# autonomous-business-skeleton

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  Dockerfile  Dockerfile.data  Dockerfile.spire  Makefile  PROJECT.md  README.md  abctl  autonomous-business-architecture-merged-prompt.md  docker-compose.monitoring.yml  docker-compose.spiffe.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/skills/: README.md
.github/workflows/: ci.yml
.scratch/business-factory/: 01-factory-core-and-demo.md  02-persisted-provisioning.md  03-business-scoped-payments.md
.scratch/econ/: 01-unit-economics.md  02-econ-from-ledger.md  03-close-the-loop.md
.scratch/gateway/: 01-llm-budget-enforcement.md
.scratch/gui/: G1-fleet-dashboard.md  G2-business-detail.md  G3-killswitch-intervention.md  G4-experiments.md  G5-audit-explorer.md
.scratch/monitoring/: M1-checks-nagios-exporter.md  M2-invariant-checks.md  M3-per-business-checks.md  M4-compose-profile-submit-adapter.md  M5-observability-stack.md
.scratch/ops/: README.md
.scratch/phase-1-foundations/: PRD.md
.scratch/portfolio/: 01-capital-allocation-engine.md  02-experiment-rollup.md  03-profit-gates-allocation.md
.scratch/product/: P1a-business-charter-theme-conformance.md  P1b-promote-scaffold-tracer-bullet.md  P2-gated-sdlc-state-machine.md  P3-console-product-workspace.md  P4-deployer.md  P5-llm-adapters-demo.md  P6-monitoring-kpis.md  P7-compliance-docs.md
.scratch/revenue/: 01-revenue-rail-port.md
.scratch/schemas/: 01-business-id-money-path.md
architecture/: 00_enterprise_overview.md  01_context_map.mermaid  02_ubiquitous_glossary.md  03_domain_catalog.md  04_event_catalog.md  05_agent_registry.json  06_autonomy_authority_matrix.md  07_data_model.md  08_data_inventory_template.json  09_compliance_architecture.md  10_security_architecture.md  11_model_and_agent_architecture.md  12_tech_stack.md  13_decision_operating_system.md  14_instantiation_guide.md  15_implementation_roadmap.md  16_verification_report.md  business_skeleton.md  events.asyncapi.yaml
config/: live.env
config/keycloak/: ab-realm.json
config/opa/: policy.rego
config/spire/: agent.conf  server.conf
docs/: console.md  monitoring-stack.md
docs/adr/: 0001-python-implementation-language.md  0002-monorepo-in-existing-repo.md  0003-interim-jwt-issuer-defer-keycloak.md  0004-keycloak-oidc-agent-tokens.md  0005-harden-oidc-iss-aud-vault.md  0006-spiffe-spire-workload-identity.md  0007-agent-gateway-mtls-ghostunnel.md  0008-gateway-opa-mtls.md  0009-gateway-postgres-mtls.md  0010-all-db-clients-mtls.md  0011-secure-by-default-postgres-isolated.md  0012-phase2-data-platform-duckdb.md  0013-data-service-long-running-semantic-layer.md  0014-warehouse-freshness-sla.md  0015-grain-aware-kpis-and-readiness-gate.md  0016-bus-mtls-redpanda-advertised-listener.md  0017-redpanda-network-isolation.md  0018-model-eval-promotion-gate.md  0019-portkey-model-provider.md  0020-grounding-and-bias-eval-gates.md  0021-tool-registry-and-untrusted-input-gate.md  0022-exfiltration-egress-classification-guard.md  0023-finance-ledger-double-entry.md  0024-compliance-lawful-basis-ci-gate.md  0025-failure-injection-scenario-suite.md  0026-control-hardening-and-trust-model.md  0027-payments-transfer-tool-gateway-to-ledger.md  0028-dsar-erasure-legal-hold.md  0029-reliability-incident-rollback.md  0030-finance-publishes-ledger-events.md  0031-experimentation-growth-engine.md  0032-business-factory.md  0033-portfolio-capital-allocation.md  0034-per-business-unit-economics.md  0035-gateway-llm-budget-enforcement.md  0036-property-based-tests-money-invariants.md  0037-asyncapi-event-contract-tests.md  0038-business-id-money-path.md  0039-econ-from-ledger-spend.md  0040-close-ledger-econ-portfolio-loop.md  (+24 more)
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: 0001-phase-1-foundations-walking-skeleton.md  0002-business-factory.md  0003-close-recommendation-gaps.md  0004-ab-social-marketing.md  (+7 more)
scripts/: data-verify.sh  demo.py  spire-bootstrap.sh  spire-bus-verify.sh  spire-mtls-verify.sh  spire-rotation-drill.sh  spire-secure-verify.sh  spire-verify.sh
src/: README.md
(+341 files in other folders)
